# DPR

./: .gitignore  README.md  dpr.db  main.py  pyproject.toml
app/: __init__.py  config.py
app/core/: events.py
app/models/: config_models.py  schemas.py
app/routers/: auth.py  concessions.py  extract.py  settings.py  upload.py  websocket.py
app/services/: cell_reader.py  config_store.py  corrector.py  database.py  exporter.py  extraction_store.py  file_utils.py  filename_generator.py  importer.py  logger.py  moulinette_loader.py  parser.py  pdf_exporter.py
docs/: Abir.xlsx  Mapping_Abir.xlsx  Mapping_Adam.xlsx  PMS_Loader_v2.8 (1).xlsm  PMS_Loader_v4.1.4.xlsm  architecture_dpr.html  code VBA DPR.txt  diagramme_cas_utilisation.puml  diagramme_classes.puml  diagramme_classes_fr.md  gantt_dpr.html  use_case_dpr.html
docs/dpr/: Cherouq.xlsx  JebelGrouz.xlsx  KsarHadada.xlsx  SidiMarzoug.xlsx
docs/reference_csv/: OutputDC.csv  OutputDW.csv  OutputMC.csv  Well_Test.csv
static/: architecture_dpr.html  index.html  login.html  register.html  uml_classes.html
static/css/: auth.css  index.css
static/js/: app.js  auth.js  config.js  i18n.js  users.js
tests/: check_config.py  create_test_dpr.py  debug_config.py  debug_extraction.py  debug_values.py  diagnose_critical.py  generate_dpr.py  inspect_dpr.py  test_api_quick.py  test_auth_rbac.py  test_extract.py  test_extraction.py  test_extraction_deep.py  test_fixes_targeted.py  test_well_names.py  verify_data_cells.py  verify_fixes.py
tests/test_data/: TestDPR.xlsx
