[project]
name = "dpr"
version = "0.1.0"
description = "DPR - Daily Production Report extraction and processing web application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "websockets>=13.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
